--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,17 @@
 
     <link rel="apple-touch-icon" sizes="180x180" href="/ridho.jpg">
     <link rel="icon" type="image/png" sizes="192x192" href="/ridho.jpg">
-    <link rel="manifest" href="/manifest.json">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/ridho.jpg">
+    <!-- <meta name="msapplication-TileImage" content="/ms-icon-144x144.png"> -->
     <meta name="theme-color" content="#000000">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <link
       rel="stylesheet"
